Bug 396052 - Firefox fails to start when run from a directory with non-native characters, r=luser sr=neil